// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error type renders correctly 1`] = `
<div
  className="css-3jbsia"
>
  Error alert
</div>
`;

exports[`success type renders correctly 1`] = `
<div
  className="css-19j3jbi"
>
  Success alert
</div>
`;
